--- a/Result.html
+++ b/Result.html
@@ -77,7 +77,7 @@
   <div class="section" id="inviteText"></div>
   <div class="section" id="sugarText"></div>
   <div class="section" id="compatibilityText"></div>
-  <div><button onclick="showTypeDetails()">Learn more about your type</button></div>
+  <div><button onclick="showTypeDetails()">More about your type</button></div>
   <div id="typeDetails"></div>
 
   <script>
@@ -112,23 +112,23 @@
     }
 
     const archetypes = {
-      "blue-control": ["Type 4: Tender Protector", "Your calm is commanding.", "The strongest love is the love that can demonstrate its fragility. – Paulo Coelho", "You’re not loud—you’re grounded. You lead through presence, not pressure. People follow you not because you demand it, but because they trust you’ll catch them."],
-      "blue-partner control": ["Type 1: Devoted Darling", "Obedience isn’t weakness. It’s devotion.", "Love is composed of a single soul inhabiting two bodies. – Aristotle", "You’re not looking to impress. You’re looking to belong. Loyalty is your kink, and closeness is your turn-on. When trust is earned, you open wide."],
-      "blue-switch": ["Type 2: Mood Multiplier", "You match their vibe—and raise it.", "Tell me what you like, and I’ll show you how much I’m listening. – Anonymous", "You’re tuned in and turned on by the energy around you. You shift roles naturally—never forced, always felt. Being fluid isn’t indecision—it’s intuition."],
-      "blue-dom street": ["Type 3: Hottie Next Door", "You bring the heat when it counts.", "I like being in control of how I feel and who I share that with. – SZA", "Most of the time, you like to take charge and set the tone, not follow it. You’re not like a thermostat that adjusts to your surroundings, you bring the heat."],
-      "blue-sub street": ["Type 2: Mood Multiplier", "You match their vibe—and raise it.", "Tell me what you like, and I’ll show you how much I’m listening. – Anonymous", "You’re tuned in and turned on by the energy around you. You shift roles naturally—never forced, always felt. Being fluid isn’t indecision—it’s intuition."],
+      "blue-control": ["Tender Protector", "Your calm is commanding.", "The strongest love is the love that can demonstrate its fragility. – Paulo Coelho", "You’re not loud—you’re grounded. You lead through presence, not pressure. People follow you not because you demand it, but because they trust you’ll catch them."],
+      "blue-partner control": ["Devoted Darling", "Obedience isn’t weakness. It’s devotion.", "Love is composed of a single soul inhabiting two bodies. – Aristotle", "You’re not looking to impress. You’re looking to belong. Loyalty is your kink, and closeness is your turn-on. When trust is earned, you open wide."],
+      "blue-switch": ["Mood Multiplier", "You match their vibe—and raise it.", "Tell me what you like, and I’ll show you how much I’m listening. – Anonymous", "You’re tuned in and turned on by the energy around you. You shift roles naturally—never forced, always felt. Being fluid isn’t indecision—it’s intuition."],
+      "blue-dom street": ["Hottie Next Door", "You bring the heat when it counts.", "I like being in control of how I feel and who I share that with. – SZA", "Most of the time, you like to take charge and set the tone, not follow it. You’re not like a thermostat that adjusts to your surroundings, you bring the heat."],
+      "blue-sub street": ["Mood Multiplier", "You match their vibe—and raise it.", "Tell me what you like, and I’ll show you how much I’m listening. – Anonymous", "You’re tuned in and turned on by the energy around you. You shift roles naturally—never forced, always felt. Being fluid isn’t indecision—it’s intuition."],
 
-      "green-control": ["Type 8: Charmer in Charge", "You don’t just take control. You make them want you to.", "If you can make them laugh, you can make them do anything. – Marilyn Monroe", "You’re magnetic. You don’t demand authority—you attract it. You lead by being unforgettable, and people follow because they want to."],
-      "green-partner control": ["Type 5: Promiscuous Plaything", "Curious. Craving. Ready.", "Sex is part of nature. I go along with nature. – Marilyn Monroe", "You crave sensation—and freedom. You like to play, and being desired turns you on just as much as giving in. You’re not afraid to explore… just don’t waste your time."],
-      "green-switch": ["Type 6: Generous Giver", "If it feels good, it goes both ways.", "Sex is an emotion in motion. – Mae West", "You’re here to connect—and you do it by giving. You can take the lead or melt into someone else’s hands. What matters is mutual want."],
-      "green-dom street": ["Type 7: Bedroom Adventurer", "Curiosity leads. Desire follows.", "It is not by obeying the rules that we come to know pleasure, but by breaking them. – Anaïs Nin", "You like to test what’s possible. You’re not reckless—you’re awake. When the vibe’s right, you flip the switch—and sometimes flip the script."],
-      "green-sub street": ["Type 6: Generous Giver", "If it feels good, it goes both ways.", "Sex is an emotion in motion. – Mae West", "You’re here to connect—and you do it by giving. You can take the lead or melt into someone else’s hands. What matters is mutual want."],
+      "green-control": ["Charmer in Charge", "You don’t just take control. You make them want you to.", "If you can make them laugh, you can make them do anything. – Marilyn Monroe", "You’re magnetic. You don’t demand authority—you attract it. You lead by being unforgettable, and people follow because they want to."],
+      "green-partner control": ["Promiscuous Plaything", "Curious. Craving. Ready.", "Sex is part of nature. I go along with nature. – Marilyn Monroe", "You crave sensation—and freedom. You like to play, and being desired turns you on just as much as giving in. You’re not afraid to explore… just don’t waste your time."],
+      "green-switch": ["Generous Giver", "If it feels good, it goes both ways.", "Sex is an emotion in motion. – Mae West", "You’re here to connect—and you do it by giving. You can take the lead or melt into someone else’s hands. What matters is mutual want."],
+      "green-dom street": ["Bedroom Adventurer", "Curiosity leads. Desire follows.", "It is not by obeying the rules that we come to know pleasure, but by breaking them. – Anaïs Nin", "You like to test what’s possible. You’re not reckless—you’re awake. When the vibe’s right, you flip the switch—and sometimes flip the script."],
+      "green-sub street": ["Generous Giver", "If it feels good, it goes both ways.", "Sex is an emotion in motion. – Mae West", "You’re here to connect—and you do it by giving. You can take the lead or melt into someone else’s hands. What matters is mutual want."],
 
-      "red-control": ["Type 12: Dungeon Master", "You’re not just having a fantasy. You’re the one in charge of it.", "Power is the ultimate aphrodisiac. – Henry Kissinger", "This isn’t pretend. This is your nature. You take control because you know you can deliver. Pain, pleasure, surrender—it all starts with your command."],
-      "red-partner control": ["Type 9: Obedient Pet", "Obedience is pleasure.", "True strength lies in submission. – Henry Miller", "You don’t want to just submit—you want to be claimed and dominated. Structure turns you on, rules excite you, and being trained is a privilege."],
-      "red-switch": ["Type 10: The Punish Me", "What you call defiance, I call foreplay.", "Sometimes I want to be punished… because it means you’re paying attention. – Anonymous", "You like to push buttons—but not randomly. You crave someone who pushes back. Beneath the attitude is desire for depth… and someone strong enough to handle both."],
-      "red-dom street": ["Type 11: The Provoker", "You press buttons—on purpose.", "I don’t do subtle. I do powerful. – Madonna", "You set the tone—and it’s usually electric. You initiate. You play bold. You don’t need permission to flip the dynamic, you are the dynamic."],
-      "red-sub street": ["Type 10: The Punish Me", "What you call defiance, I call foreplay.", "Sometimes I want to be punished… because it means you’re paying attention. – Anonymous", "You like to push buttons—but not randomly. You crave someone who pushes back. Beneath the attitude is desire for depth… and someone strong enough to handle both."]
+      "red-control": ["Dungeon Master", "You’re not just having a fantasy. You’re the one in charge of it.", "Power is the ultimate aphrodisiac. – Henry Kissinger", "This isn’t pretend. This is your nature. You take control because you know you can deliver. Pain, pleasure, surrender—it all starts with your command."],
+      "red-partner control": ["Obedient Pet", "Obedience is pleasure.", "True strength lies in submission. – Henry Miller", "You don’t want to just submit—you want to be claimed and dominated. Structure turns you on, rules excite you, and being trained is a privilege."],
+      "red-switch": ["The Punish Me", "What you call defiance, I call foreplay.", "Sometimes I want to be punished… because it means you’re paying attention. – Anonymous", "You like to push buttons—but not randomly. You crave someone who pushes back. Beneath the attitude is desire for depth… and someone strong enough to handle both."],
+      "red-dom street": ["The Provoker", "You press buttons—on purpose.", "I don’t do subtle. I do powerful. – Madonna", "You set the tone—and it’s usually electric. You initiate. You play bold. You don’t need permission to flip the dynamic, you are the dynamic."],
+      "red-sub street": ["The Punish Me", "What you call defiance, I call foreplay.", "Sometimes I want to be punished… because it means you’re paying attention. – Anonymous", "You like to push buttons—but not randomly. You crave someone who pushes back. Beneath the attitude is desire for depth… and someone strong enough to handle both."]
     };
 
     const key = `${room}-${q9}`;
@@ -137,18 +137,18 @@
     archetypeText.innerHTML = `<strong>${typeName}</strong><br><em>${slogan}</em>`;
 
     const matches = {
-      "Type 1: Devoted Darling": ["Type 4: Tender Protector", "Type 3: Hottie Next Door", "Promiscuous Plaything or Type 5"],
-      "Type 2: Mood Multiplier": ["Type 3: Hottie Next Door", "Type 4: Tender Protector", "Bedroom Adventurer or Type 7"],
-      "Type 3: Hottie Next Door": ["Type 2: Mood Multiplier", "Type 1: Devoted Darling", "Generous Giver or Type 6"],
-      "Type 4: Tender Protector": ["Type 1: Devoted Darling", "Type 2: Mood Multiplier", "Promiscuous Plaything or Type 5"],
-      "Type 5: Promiscuous Plaything": ["Type 8: Charmer in Charge", "Type 7: Bedroom Adventurer", "Dungeon Master or Type 12"],
-      "Type 6: Generous Giver": ["Type 7: Bedroom Adventurer", "Type 8: Charmer in Charge", "The Provoker or Type 11"],
-      "Type 7: Bedroom Adventurer": ["Type 6: Generous Giver", "Type 5: Promiscuous Plaything", "The Punish Me or Type 10"],
-      "Type 8: Charmer in Charge": ["Type 5: Promiscuous Plaything", "Type 6: Generous Giver", "Obedient Pet or Type 9"],
-      "Type 9: Obedient Pet": ["Dungeon Master or Type 12", "The Provoker or Type 11", "Charmer in Charge or Type 8"],
-      "Type 10: The Punish Me": ["The Provoker or Type 11", "Dungeon Master or Type 12", "Bedroom Adventurer or Type 7"],
-      "Type 11: The Provoker": ["The Punish Me or Type 10", "Obedient Pet or Type 9", "Generous Giver or Type 6"],
-      "Type 12: Dungeon Master": ["Obedient Pet or Type 9", "The Punish Me or Type 10", "Promiscuous Plaything or Type 5"]
+      "Devoted Darling": ["Tender Protector", "Hottie Next Door", "Promiscuous Plaything"],
+      "Mood Multiplier": ["Hottie Next Door", "Tender Protector", "Bedroom Adventurer"],
+      "Hottie Next Door": ["Mood Multiplier", "Devoted Darling", "Generous Giver"],
+      "Tender Protector": ["Devoted Darling", "Mood Multiplier", "Promiscuous Plaything"],
+      "Promiscuous Plaything": ["Charmer in Charge", "Bedroom Adventurer", "Dungeon Master"],
+      "Generous Giver": ["Bedroom Adventurer", "Charmer in Charge", "The Provoker"],
+      "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "The Punish Me"],
+      "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Obedient Pet"],
+      "Obedient Pet": ["Dungeon Master", "The Provoker", "Charmer in Charge"],
+      "The Punish Me": ["The Provoker", "Dungeon Master", "Bedroom Adventurer"],
+      "The Provoker": ["The Punish Me", "Obedient Pet", "Generous Giver"],
+      "Dungeon Master": ["Obedient Pet", "The Punish Me", "Promiscuous Plaything"]
     };
 
     if (matches[typeName]) {
