--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="question">
-          <p>10. When the clothes come off, what kind of dirty talk makes you melt?</p>
+          <p>10. When the clothes come off, what kind of dirty talk turns you on most?</p>
           <label><input type="radio" name="q10" value="praise"> Praise</label>
           <label><input type="radio" name="q10" value="teasing"> Playful teasing</label>
           <label><input type="radio" name="q10" value="degradation"> Degradation (we don’t judge, unless you’re into that)</label>
