--- a/Result.html
+++ b/Result.html
@@ -125,7 +125,7 @@
       "green-sub street": ["Generous Giver", "If it feels good, it goes both ways.", "Sex is an emotion in motion. – Mae West", "You’re here to connect—and you do it by giving. You can take the lead or melt into someone else’s hands. What matters is mutual want."],
 
       "red-control": ["Dungeon Master", "You’re not just having a fantasy. You’re the one in charge of it.", "Power is the ultimate aphrodisiac. – Henry Kissinger", "This isn’t pretend. This is your nature. You take control because you know you can deliver. Pain, pleasure, surrender—it all starts with your command."],
-      "red-partner control": ["Obedient Pet", "Obedience is pleasure.", "True strength lies in submission. – Henry Miller", "You don’t want to just submit—you want to be claimed and dominated. Structure turns you on, rules excite you, and being trained is a privilege."],
+      "red-partner control": ["Willing Submissive", "Obedience is pleasure.", "True strength lies in submission. – Henry Miller", "You don’t want to just submit—you want to be claimed and dominated. Structure turns you on, rules excite you, and being trained is a privilege."],
       "red-switch": ["The Punish Me", "What you call defiance, I call foreplay.", "Sometimes I want to be punished… because it means you’re paying attention. – Anonymous", "You like to push buttons—but not randomly. You crave someone who pushes back. Beneath the attitude is desire for depth… and someone strong enough to handle both."],
       "red-dom street": ["The Provoker", "You press buttons—on purpose.", "I don’t do subtle. I do powerful. – Madonna", "You set the tone—and it’s usually electric. You initiate. You play bold. You don’t need permission to flip the dynamic, you are the dynamic."],
       "red-sub street": ["The Punish Me", "What you call defiance, I call foreplay.", "Sometimes I want to be punished… because it means you’re paying attention. – Anonymous", "You like to push buttons—but not randomly. You crave someone who pushes back. Beneath the attitude is desire for depth… and someone strong enough to handle both."]
@@ -144,11 +144,11 @@
       "Promiscuous Plaything": ["Charmer in Charge", "Bedroom Adventurer", "Dungeon Master"],
       "Generous Giver": ["Bedroom Adventurer", "Charmer in Charge", "The Provoker"],
       "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "The Punish Me"],
-      "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Obedient Pet"],
-      "Obedient Pet": ["Dungeon Master", "The Provoker", "Charmer in Charge"],
+      "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Willing Submissive"],
+      "Willing Submissive": ["Dungeon Master", "The Provoker", "Charmer in Charge"],
       "The Punish Me": ["The Provoker", "Dungeon Master", "Bedroom Adventurer"],
-      "The Provoker": ["The Punish Me", "Obedient Pet", "Generous Giver"],
-      "Dungeon Master": ["Obedient Pet", "The Punish Me", "Promiscuous Plaything"]
+      "The Provoker": ["The Punish Me", "Willing Submissive", "Generous Giver"],
+      "Dungeon Master": ["Willing Submissive", "The Punish Me", "Promiscuous Plaything"]
     };
 
     if (matches[typeName]) {
