--- a/Result.html
+++ b/Result.html
@@ -77,7 +77,7 @@
   <div class="section" id="inviteText"></div>
   <div class="section" id="sugarText"></div>
   <div class="section" id="compatibilityText"></div>
-  <div><button onclick="showTypeDetails()">More about your type</button></div>
+  <div><button onclick="showTypeDetails()">More about you</button></div>
   <div id="typeDetails"></div>
 
   <script>
