--- a/Result.html
+++ b/Result.html
@@ -134,7 +134,7 @@
     const key = `${room}-${q9}`;
     const [typeName, slogan, quote, description] = archetypes[key] || ["Unknown", "", "", ""];
 
-    archetypeText.innerHTML = `<strong>${typeName}</strong><br><em>${slogan}</em>`;
+    archetypeText.innerHTML = `<div><strong>Your Sexual Profile:</strong></div><br><strong>${typeName}</strong><br><em>${slogan}</em>`;
 
     const matches = {
       "Devoted Darling": ["Tender Protector", "Hottie Next Door", "Promiscuous Plaything"],
