--- a/Result.html
+++ b/Result.html
@@ -138,7 +138,7 @@
   <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
     Your Sexual Profile:
   </div>
-  <div style="font-weight: bold; text-shadow: 0 0 2px rgba(255, 255, 255, 0.4); margin-bottom: 2px;">
+  <div style="font-weight: bold; margin-bottom: 2px;">
     ${typeName}
   </div>
   <div style="font-style: italic; margin-top: 0;">
