--- a/Index.html
+++ b/Index.html
@@ -82,14 +82,13 @@
           <label><input type="radio" name="q8" value="receive"> Receive pleasure</label>
         </div>
 
-        <div class="question">
-          <p>9. Who do you want to wear the pants?</p>
-          <label><input type="radio" name="q9" value="control"> I like to be in control</label>
-          <label><input type="radio" name="q9" value="partner control"> I want my partner to take control</label>
-          <label><input type="radio" name="q9" value="dom street"> I’m dominant in the streets & submissive in the sheets</label>
-          <label><input type="radio" name="q9" value="sub street"> I’m submissive in the streets & dominant in the sheets</label>
-          <label><input type="radio" name="q9" value="switch"> I like to switch it up</label>
-        </div>
+ <div class="question">
+  <p>9. Who do you want to wear the pants?</p>
+  <label><input type="radio" name="q9" value="control"> I like to be in control</label>
+  <label><input type="radio" name="q9" value="partner control"> I want my partner to take control</label>
+  <label><input type="radio" name="q9" value="depends mood"> Depends on my mood</label>
+  <label><input type="radio" name="q9" value="depends partner"> Depends on who I’m with</label>
+</div>
 
         <div class="question">
           <p>10. When the clothes come off, what kind of dirty talk turns you on most?</p>
