--- a/Index.html
+++ b/Index.html
@@ -77,10 +77,10 @@
         </div>
 
         <div class="question">
-          <p>8. Do you prefer to give pleasure or receive it?</p>
-          <label><input type="radio" name="q8" value="give"> Give pleasure</label>
-          <label><input type="radio" name="q8" value="receive"> Receive pleasure</label>
-        </div>
+  <p>8. Do you have a 🍆 or a 🐈?</p>
+  <label><input type="radio" name="q8" value="eggplant"> 🍆</label>
+  <label><input type="radio" name="q8" value="cat"> 🐈</label>
+</div>
 
  <div class="question">
   <p>9. Who do you want to wear the pants?</p>
