--- a/Result.html
+++ b/Result.html
@@ -87,6 +87,7 @@
     const q5 = params.get("q5");
     const q6 = params.get("q6");
     const q9 = params.get("q9");
+    const q8 = params.get("q8"); // gender (🍆 or 🐈)
 
     const roomTitle = document.getElementById("roomTitle");
     const resultBody = document.getElementById("resultBody");
@@ -131,14 +132,46 @@
     const key = `${room}-${q9}`;
     const [typeName, slogan, quote, description] = archetypes[key] || ["Unknown", "", "", ""];
 
-    archetypeText.innerHTML = `
+    let imageHTML = "";
+
+if (typeName !== "Unknown" && (q8 === "eggplant" || q8 === "cat")) {
+  const safeName = typeName.toLowerCase().replace(/\s+/g, "_").replace(/[^a-z0-9_]/g, "");
+  const genderSuffix = q8 === "eggplant" ? "male" : "female";
+  const baseFileName = `images/${safeName}_${genderSuffix}`;
+  const extensions = [".jpg", ".JPG", ".png", ".PNG"];
+  const imageEl = document.createElement("img");
+
+  function tryNextExtension(index = 0) {
+    if (index >= extensions.length) return;
+    const attempt = `${baseFileName}${extensions[index]}`;
+    imageEl.src = attempt;
+    imageEl.onerror = () => tryNextExtension(index + 1);
+  }
+
+  tryNextExtension();
+
+  imageEl.alt = `${typeName} Image`;
+  imageEl.style = `
+    max-width: 100%;
+    height: auto;
+    border-radius: 16px;
+    margin: 15px 0;
+    border: 4px solid gold;
+    box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+  `;
+
+  imageHTML = imageEl.outerHTML;
+}
+
+archetypeText.innerHTML = `
   <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
     Your Sexual Profile:
   </div>
-  <div style="font-weight: bold; margin-bottom: 2px;">
+  <div style="font-weight: bold; font-size: 1.4rem; margin-bottom: 2px;">
     ${typeName}
   </div>
-  <div style="font-style: italic; margin-top: 0;">
+  ${imageHTML}
+  <div style="font-style: italic; margin-top: 10px;">
     ${slogan}
   </div>
 `;
