--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -10,73 +10,26 @@
       margin: 0;
       font-family: 'Montserrat', sans-serif;
       color: white;
-      background-color: #111;
-      padding: 20px;
+      background-color: #000;
     }
 
-    .archetype-card {
-      border: 4px solid gold;
-      border-radius: 16px;
-      margin: 20px auto;
-      padding: 20px;
-      max-width: 800px;
+    .page-title {
       text-align: center;
-      box-shadow: 0 0 12px rgba(255, 215, 0, 0.3);
+      margin-top: 40px;
     }
 
-    .image-pair {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 0;
-      overflow: hidden;
-      border-radius: 12px;
-    }
-
-    .image-pair img {
-      width: 50%;
-      height: auto;
-      display: block;
-    }
-
-    .divider {
-      width: 4px;
-      background-color: gold;
-      height: auto;
-    }
-
-    .slogan {
-      font-style: italic;
-      margin-top: 10px;
-    }
-
-    .blue-room {
-      background-color: #064D95;
-      text-shadow: 0 0 4px #57b9ff;
-    }
-
-    .green-room {
-      background-color: #06954E;
-      text-shadow: 0 0 4px #88e788;
-    }
-
-    .red-room {
-      background-color: #950606;
-      text-shadow: 0 0 4px #ff4d4d;
-    }
-
-    h3 a {
+    .page-title h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 3rem;
+      font-weight: 700;
       color: gold;
-      text-decoration: none;
-    }
-
-    h3 a:hover {
-      text-decoration: underline;
+      margin-bottom: 10px;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
     }
 
     .find-type-btn {
       text-align: center;
-      margin: 40px 0 20px;
+      margin: 30px 0;
     }
 
     .find-type-btn a {
@@ -94,136 +47,240 @@
     .find-type-btn a:hover {
       transform: scale(1.05);
     }
+
+    .blue-room-bg {
+      background-color: #064D95;
+      padding: 40px 0;
+    }
+
+    .green-room-bg {
+      background-color: #06954E;
+      padding: 40px 0;
+    }
+
+    .red-room-bg {
+      background-color: #950606;
+      padding: 40px 0;
+    }
+
+    .archetype-card {
+      margin: 40px auto;
+      max-width: 800px;
+      text-align: center;
+    }
+
+    .image-container {
+      border: 4px solid gold;
+      border-radius: 12px;
+      overflow: hidden;
+      display: inline-block;
+      width: 100%;
+      max-width: 800px;
+      margin-bottom: 16px;
+    }
+
+    .image-pair {
+      display: flex;
+      height: 360px;
+    }
+
+    .image-pair img {
+      width: 50%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    .divider {
+      width: 4px;
+      background-color: gold;
+      height: 100%;
+    }
+
+    .slogan {
+      font-style: italic;
+      margin-top: 10px;
+      font-size: 1rem;
+      line-height: 1.4;
+    }
+
+    h3 {
+      margin: 8px 0 4px;
+    }
+
+    h3 a {
+      color: gold;
+      text-decoration: none;
+      font-size: 1.4rem;
+    }
+
+    h3 a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
+
+  <div class="page-title">
+    <h1>Sexual Profiles</h1>
+  </div>
 
   <div class="find-type-btn">
     <a href="index.html">🔍 Find Your Type</a>
   </div>
 
   <!-- BLUE ROOM -->
-  <div class="archetype-card blue-room">
-    <div class="image-pair">
-      <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
-      <div class="divider"></div>
-      <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
+  <section class="blue-room-bg">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
+          <div class="divider"></div>
+          <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
+        </div>
+      </div>
+      <h3><a href="tender-protector.html">Tender Protector</a></h3>
+      <p class="slogan">You lead with gravity, not volume.</p>
     </div>
-    <h3><a href="tender-protector.html">Tender Protector</a></h3>
-    <p class="slogan">You lead with gravity, not volume.</p>
-  </div>
 
-  <div class="archetype-card blue-room">
-    <div class="image-pair">
-      <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
-      <div class="divider"></div>
-      <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
+          <div class="divider"></div>
+          <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+        </div>
+      </div>
+      <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+      <p class="slogan">Nothing is as kinky as loyalty.</p>
     </div>
-    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-    <p class="slogan">Nothing is as kinky as loyalty.</p>
-  </div>
 
-  <div class="archetype-card blue-room">
-    <div class="image-pair">
-      <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
-      <div class="divider"></div>
-      <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
+          <div class="divider"></div>
+          <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+        </div>
+      </div>
+      <h3><a href="heatwave.html">Heatwave</a></h3>
+      <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
     </div>
-    <h3><a href="heatwave.html">Heatwave</a></h3>
-    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
-  </div>
 
-  <div class="archetype-card blue-room">
-    <div class="image-pair">
-      <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
-      <div class="divider"></div>
-      <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
+          <div class="divider"></div>
+          <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+        </div>
+      </div>
+      <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+      <p class="slogan">You match their vibe—and raise it.</p>
     </div>
-    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-    <p class="slogan">You match their vibe—and raise it.</p>
-  </div>
+  </section>
 
   <!-- GREEN ROOM -->
-  <div class="archetype-card green-room">
-    <div class="image-pair">
-      <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
-      <div class="divider"></div>
-      <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
+  <section class="green-room-bg">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
+          <div class="divider"></div>
+          <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
+        </div>
+      </div>
+      <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+      <p class="slogan">You don’t just take control. You make them beg for it.</p>
     </div>
-    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-    <p class="slogan">You don’t just take control. You make them beg for it.</p>
-  </div>
 
-  <div class="archetype-card green-room">
-    <div class="image-pair">
-      <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
-      <div class="divider"></div>
-      <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
+          <div class="divider"></div>
+          <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+        </div>
+      </div>
+      <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+      <p class="slogan">Are you ready for a wild ride!</p>
     </div>
-    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-    <p class="slogan">Are you ready for a wild ride!</p>
-  </div>
 
-  <div class="archetype-card green-room">
-    <div class="image-pair">
-      <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
-      <div class="divider"></div>
-      <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
+          <div class="divider"></div>
+          <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+        </div>
+      </div>
+      <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+      <p class="slogan">I'm up for anything and down to get down and dirty.</p>
     </div>
-    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-    <p class="slogan">I'm up for anything and down to get down and dirty.</p>
-  </div>
 
-  <div class="archetype-card green-room">
-    <div class="image-pair">
-      <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
-      <div class="divider"></div>
-      <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
+          <div class="divider"></div>
+          <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+        </div>
+      </div>
+      <h3><a href="generous-giver.html">Generous Giver</a></h3>
+      <p class="slogan">You have so much to give, you just need someone to give it to.</p>
     </div>
-    <h3><a href="generous-giver.html">Generous Giver</a></h3>
-    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
-  </div>
+  </section>
 
   <!-- RED ROOM -->
-  <div class="archetype-card red-room">
-    <div class="image-pair">
-      <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
-      <div class="divider"></div>
-      <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
+  <section class="red-room-bg">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
+          <div class="divider"></div>
+          <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
+        </div>
+      </div>
+      <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+      <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
     </div>
-    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
-  </div>
 
-  <div class="archetype-card red-room">
-    <div class="image-pair">
-      <img src="images/claimed_and_trained_female.jpg" alt="Claimed & Trained - Female">
-      <div class="divider"></div>
-      <img src="images/claimed_and_trained_male.jpg" alt="Claimed & Trained - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
+          <div class="divider"></div>
+          <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
+        </div>
+      </div>
+      <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+      <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
     </div>
-    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-  </div>
 
-  <div class="archetype-card red-room">
-    <div class="image-pair">
-      <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
-      <div class="divider"></div>
-      <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
+          <div class="divider"></div>
+          <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+        </div>
+      </div>
+      <h3><a href="the-provoker.html">The Provoker</a></h3>
+      <p class="slogan">You press buttons—on purpose.</p>
     </div>
-    <h3><a href="the-provoker.html">The Provoker</a></h3>
-    <p class="slogan">You press buttons—on purpose.</p>
-  </div>
 
-  <div class="archetype-card red-room">
-    <div class="image-pair">
-      <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
-      <div class="divider"></div>
-      <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+    <div class="archetype-card">
+      <div class="image-container">
+        <div class="image-pair">
+          <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
+          <div class="divider"></div>
+          <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+        </div>
+      </div>
+      <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+      <p class="slogan">What you call defiance, I call foreplay.</p>
     </div>
-    <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-    <p class="slogan">What you call defiance, I call foreplay.</p>
-  </div>
+  </section>
 
   <div class="find-type-btn">
     <a href="index.html">🔍 Find Your Type</a>
